@@ -1,3 +1,4 @@
+* fixed command declaration checking
 * relicensed to BSD
 * added namespace property to end-point commands
 * associated functions invoked with namespace rather then just connection
